Fix overlapped vertical scrollbar
When one go beyond the editor viewport, the scrollbar overlaps the
original one (which doesn't seem to have any utility). So, in order to
avoid this situation, the 'original' vertical scrollbar has been remove.

--- a/server/src/Editor.css
+++ b/server/src/Editor.css
@@ -4,7 +4,6 @@
 
 .editor .CodeMirror {
   height: 100%;
-  overflow-y: scroll;
 }
 
 .editor .CodeMirror-lines {
